--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "mailing-core": "^0.8.2-next.0",
+    "mailing-core": "^0.8.8",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
     "next": "^12.3.1",
-    "nodemailer": "6.7.8",
+    "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,8 +16,8 @@
     "@types/mjml": "^4.7.0",
     "@types/mjml-react": "2.0.6",
     "@types/nodemailer": "6.4.6",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "mailing": "^0.8.2-next.0"
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "mailing": "^0.8.8"
   }
 }
